--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -4,13 +4,17 @@ layout: default
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">
+        <span class="welcom" style="font-size: 2.5rem; font-family: ui-serif;">Hi, I'm</span>
       {% if site.title == 'blank' %}
-        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
+        <span class="font-weight-bold" style="font-size: 3.5rem;">{{ site.first_name }}</span> {{ site.middle_name }}
         {{ site.last_name }}
       {% else %}
         {{ site.title }}
       {% endif %}
     </h1>
+    <h4>
+      <span class="intro">CV解锁城市密码，渲染引擎重构时空</span>
+    </h4>
     <p class="desc">{{ page.subtitle }}</p>
   </header>
 
