--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -12,10 +12,7 @@ layout: default
         {{ site.title }}
       {% endif %}
     </h1>
-    <h4>
-      <span class="intro">CV解锁城市密码，渲染引擎重构时空</span>
-    </h4>
-    <p class="desc">{{ page.subtitle }}</p>
+    <h4 class="desc">{{ page.subtitle }}</h4>
   </header>
 
   <article>
