--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,7 +23,8 @@ $light-purple-color: color.adjust($purple-color, $lightness: 25%);
 $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
 $yellow-color: #efcc00 !default;
-$my-color: #cbda99 !default;
+$my-color: #8B9155 !default;
+$my-light-color: #cbda99 !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: color.adjust($grey-color, $lightness: 40%);
