--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -36,7 +36,7 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light: rgba($my-color, 0.05);
+$code-bg-color-light: rgba(139, 145, 85, 0.05);
 $code-bg-color-dark: #2c3237 !default;
 
 // Font awesome location
